--- a/tutorial1MD.html
+++ b/tutorial1MD.html
@@ -361,7 +361,7 @@
 								variable eta equal 1000*(v_v11+v_v22+v_v33)/3.0 <br>
 								print "viscosity: ${eta} [mPa.s]" <br>
 							</div>
-						<p align="justify"> I find a viscosity equal 0.855 mPa.s, which is expected for the TIP4P/2005 water model. </p>
+						<p align="justify"> I find a viscosity equal to 0.855 mPa.s, which is expected for the TIP4P/2005 water model. </p>
 						</div>
 					</div>	
 					<div class="Container1 BackWhite MarginBottom">
