--- a/tutorial1MD.html
+++ b/tutorial1MD.html
@@ -362,7 +362,11 @@
 								variable eta equal 1000*(v_v11+v_v22+v_v33)/3.0 <br>
 								print "viscosity: ${eta} [mPa.s]" <br>
 							</div>
-						<p align="justify">When running this code, I find a viscosity very close to the 0.855 mPa.s, which is expected for the TIP4P/2005 water model. Other methods can be used to measure the viscosity of a fluid, for example using a shear flow, but the present measurement is elegant because it works at the equilibrium, i.e. in absence of external forcing. </p>
+						<p align="justify">When running this code, I find a viscosity very close to the 0.855 mPa.s, which is expected for the TIP4P/2005 water model. Other methods can be used to measure the viscosity of a fluid, for example using a shear flow, but the present measurement is elegant because it works at the equilibrium, i.e. in absence of external forcing.
+							
+			
+							
+							</p>
 						</div>
 					</div>	
 					<div class="Container1 BackWhite MarginBottom">
