--- a/tutorial2MD.html
+++ b/tutorial2MD.html
@@ -241,8 +241,8 @@
 							<p class="Large"><b>Step 2 &mdash; LAMMPS script </b></p> <br>
 							
 							<p align="justify">
-								The following LAMMPS input script contain a first equilibrium phase. Then, the "plugg" carbon atoms are removed, opening the CNT, and the number of water molecules filling the tube are recorded over time.
-								A moving graphene wall is used to impose the atmospheric pressure to the water reservoir, and also to prevent the evaporation of water molecule. Only the water molecules located far from the tube entrance are thermalised. 
+								The following LAMMPS input script contains two phase: an equilibrium phase and a filling (out-of-equilibrium) phase. After the equilibrium phase is done, the carbon atoms forming the "plugg" at the tube entrance are removed, opening the CNT, and the number of water molecules filling the tube is recorded over time.
+								A moving graphene wall is used to impose the atmospheric pressure to the water reservoir, and also to prevent the evaporation of water molecules. Only water molecules located far from the tube entrance are thermalised. 
 							</p>
 							
 							<div class="ContainerCode">
