--- a/tutorial2MD.html
+++ b/tutorial2MD.html
@@ -317,8 +317,10 @@
 							</div>
 
 							<p align="justify">The following figure shows the initial state of the simulation as well as the state at the end of the equilibrium phase.</p>
+							<br>
 							<img src="./tuto2MD/md_water_CNT.dat.tga.png" style="width:100%" alt="Picture">
-							A video showing the capillary filling made using this code is available <a TARGET="_BLANK" href="https://www.youtube.com/watch?v=hrOh_J6x5Iw&t=8s">here</a>. 
+							<br>
+							A video made from the "dump.2.lammpstrj" file generated with this script is available <a TARGET="_BLANK" href="https://www.youtube.com/watch?v=hrOh_J6x5Iw&t=8s">here</a>. 
 							
 					</div>	
 					<div class="Container1 BackWhite MarginBottom">
