--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 					</div>
 	    			</div>
 				<div class="Twothird">
-					<div class="Container1 BackWhite MarginBottom">
+					<div class="Container3 MarginBottom">
 
 						<div class="clearfix Container5">
-							<img class="img2" src="./Images/WaterCNT.jpg" alt="box with water" width="180">
+							<img class="img2" src="./Images/WaterCNT.jpg" alt="carbon nanotube CNT" width="180">
 							<p class="Large"><b>
 								<a href="tutorial2MD.html">
 									Step-by-step tutorial &mdash; molecular dynamics, capillary filling of a carbon nanotube (CNT)
