--- a/tutorial2MD.html
+++ b/tutorial2MD.html
@@ -319,9 +319,10 @@
 							<p align="justify">The following figure shows the initial state of the simulation as well as the state at the end of the equilibrium phase.</p>
 							<br>
 							<img src="./tuto2MD/md_water_CNT.dat.tga.png" style="width:100%" alt="Picture">
+							<br><br>
+							Here is a video made from the "dump.2.lammpstrj" file generated with this script :
 							<br>
-							A video made from the "dump.2.lammpstrj" file generated with this script is available <a TARGET="_BLANK" href="https://www.youtube.com/watch?v=hrOh_J6x5Iw&t=8s">here</a>. 
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/hrOh_J6x5Iw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/hrOh_J6x5Iw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
 					</div>	
 					<div class="Container1 BackWhite MarginBottom">
 						<div class="clearfix Container7">
