--- a/tutorial1MD.html
+++ b/tutorial1MD.html
@@ -363,9 +363,10 @@
 								print "viscosity: ${eta} [mPa.s]" <br>
 							</div>
 						<p align="justify">When running this code, I find a viscosity very close to the 0.855 mPa.s, which is expected for the TIP4P/2005 water model. Other methods can be used to measure the viscosity of a fluid, for example using a shear flow, but the present measurement is elegant because it works at the equilibrium, i.e. in absence of external forcing.
-							
-			
-							
+							<br><br>
+							 Here is a video made from this script : 
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/lVb_eiVMJHY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<br>
 							</p>
 						</div>
 					</div>	
