--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 							</b></p>
 							
 							<p align="justify">
-								The system is a cube filled with water molecules (TIP4P/2005 model). Molecular dynamics simulations are performed with the code 								LAMMPS, atom visualisation is made with VMD, and data plotting with Xmgrace.
-								The water is first equilibrated at ambient temperature and ambient pressure, then, basic quantities such as density, diffusion coefficient 									or viscosity are measured. 
+								The system is a cube filled with water molecules (TIP4P/2005 model). Molecular dynamics simulations are performed with the code LAMMPS, atom visualisation is made with VMD, and data plotting with Xmgrace.
+								The water is first equilibrated at ambient temperature and ambient pressure, then, basic quantities such as density and viscosity are measured. 
 							</p>
 						</div>
 
