--- a/tutorial2MD.html
+++ b/tutorial2MD.html
@@ -235,6 +235,7 @@
 
 							</div>
 							
+								You can download directly both python file (<a TARGET="_BLANK" href="tuto2MD/systemgeneration.py">systemgeneration.py</a>) and generated data file (<a TARGET="_BLANK" href="tuto2MD/data.lammps">data.lammps</a>).
 
 							<br><br>
 
