--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<img class="img2" src="./Images/WaterCNT.jpg" alt="carbon nanotube CNT" width="180">
 							<p class="Large"><b>
 								<a href="tutorial2MD.html">
-									Step-by-step tutorial &mdash; molecular dynamics, capillary filling of a carbon nanotube (CNT)
+									Molecular dynamics: capillary filling of a carbon nanotube (how-to)
 								</a>
 							</b></p>
 							
@@ -93,7 +93,7 @@
 							<img class="img2" src="./Images/water_reaxFF.jpg" alt="box with water" width="180">
 							<p class="Large"><b>
 								<a href="tutorial1MD.html">
-									Step-by-step tutorial &mdash; molecular dynamics for absolute beginners
+									Molecular dynamics: viscosity measurement of bulk water (step-by-step tutorial)
 								</a>
 							</b></p>
 							
@@ -107,7 +107,7 @@
 							<img class="img2" src="./Images/xmgrace_curve.png" alt="curve made with xmgrace" width="180">
 							<p class="Large"><b>
 								<a href="xmgracetipstricks.html">
-									Tips and tricks &mdash; plotting data with Xmgrace
+									Plotting data with Xmgrace (tips and tricks)
 								</a>
 							</b></p>
 						</div>
