--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							</b></p>
 							
 							<p align="justify">
-								The system is a carbon nanotube in contact with a water reservoir. A moving wall present the evaporation of water molecules. Molecular dynamics simulations are performed with the code LAMMPS, atom visualisation is made with VMD, and data plotting with Xmgrace.
+								The simulation is made using LAMMPS. The system is a carbon nanotube (CNT) in a membrane, in contact with a reservoir of water molecules. A moving wall (piston) prevents the evaporation of water molecules. Atom visualisation is made with VMD, and data plotting with Xmgrace.
 							</p>
 						</div>
 
@@ -98,8 +98,7 @@
 							</b></p>
 							
 							<p align="justify">
-								The system is a cube filled with water molecules (TIP4P/2005 model). Molecular dynamics simulations are performed with the code LAMMPS, atom visualisation is made with VMD, and data plotting with Xmgrace.
-								The water is first equilibrated at ambient temperature and ambient pressure, then, basic quantities such as density and viscosity are measured. 
+								The simulation is made using LAMMPS. The system is a cube of water molecules (TIP4P/2005 model). The water is first equilibrated at ambient temperature and ambient pressure, then, basic quantities such as density and viscosity are measured. Atom visualisation is made with VMD, and data plotting with Xmgrace. 
 							</p>
 						</div>
 
