--- a/tutorial2MD.html
+++ b/tutorial2MD.html
@@ -80,9 +80,9 @@
 					</div>
 					<div class="Container1 BackWhite MarginBottom">
 						<div class="clearfix Container5">
-							<p class="Large"><b>Step-by-step tutorial &mdash; molecular dynamics, capillary filling of a carbon nanotube (CNT)</b></p>
+							<p class="Large"><b>Molecular dynamics: capillary filling of a carbon nanotube (how-to) </b></p>
 
-							<p align="justify">In order to follow this step-by-step tutorial, you need to download <a TARGET="_BLANK" href="https://lammps.sandia.gov/">LAMMPS</a>, which is an open source classical molecular dynamics code. You also need a text editor, a molecular visualisation program, such as <a TARGET="_BLANK" href="https://www.ks.uiuc.edu/Research/vmd/">VMD</a>, and a data plotting program, such as <a TARGET="_BLANK" href="http://exciting-code.org/xmgrace-quickstart">Xmgrace</a>. Finally, I use Python to generate the initial configuration.
+							<p align="justify">In order to execute these scripts, you need to download <a TARGET="_BLANK" href="https://lammps.sandia.gov/">LAMMPS</a>, which is an open source classical molecular dynamics code. You also need a text editor, a molecular visualisation program, such as <a TARGET="_BLANK" href="https://www.ks.uiuc.edu/Research/vmd/">VMD</a>, and a data plotting program, such as <a TARGET="_BLANK" href="http://exciting-code.org/xmgrace-quickstart">Xmgrace</a>. Finally, I use Python to generate the initial configuration.
 							</p>
 							<br>
 							<p class="Large"><b>Step 1 &mdash; data file generation</b></p>
