--- a/tutorial1MD.html
+++ b/tutorial1MD.html
@@ -80,7 +80,7 @@
 					</div>
 					<div class="Container1 BackWhite MarginBottom">
 						<div class="clearfix Container5">
-							<p class="Large"><b>Step-by-step tutorial &mdash; molecular dynamics for absolute beginners</b></p>
+							<p class="Large"><b>Molecular dynamics: viscosity measurement of bulk water (step-by-step tutorial)</b></p>
 
 							<p align="justify">In order to follow this step-by-step tutorial, you need to download <a TARGET="_BLANK" href="https://lammps.sandia.gov/">LAMMPS</a>, which is an open source classical molecular dynamics code. You also need a text editor, a molecular visualisation program, such as <a TARGET="_BLANK" href="https://www.ks.uiuc.edu/Research/vmd/">VMD</a>, and a data plotting program, such as <a TARGET="_BLANK" href="http://exciting-code.org/xmgrace-quickstart">Xmgrace</a>. Finally, I use Python to generate the initial configuration.
 							</p>
