--- a/looptutorial.html
+++ b/looptutorial.html
@@ -87,7 +87,7 @@
 							<br>
 							<p class="Large"><b>Example 1</b></p>
 
-							<p align="justify">LAMMPS requires a few things to be define in any code, such as the simulation box, so to test the "loop" script given below, just insert the following lines in the script.</p>
+							<p align="justify">First, let us create a minimalist script, containing only the commands that LAMMPS absolutly requires such as the simulation box.</p>
 
 							<div class="ContainerCode">
 								region          simbox block 0 1 0 1 0 1 <br>
