--- a/looptutorial.html
+++ b/looptutorial.html
@@ -116,6 +116,9 @@
 							label       	break <br>
 							variable    	ijk delete 
 							</div>
+							
+							<p align="justify">Running this script creates 10 data files, and prints the values of the counter in the terminal.</p>
+
 
 
 					</div>	
