--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							</b></p>
 							
 							<p align="justify">
-								Examples of loop in the LAMMPS formalism.
+								Example of loop in the LAMMPS formalism.
 							</p>
 						</div>
 
