--- a/looptutorial.html
+++ b/looptutorial.html
@@ -82,10 +82,8 @@
 						<div class="clearfix Container5">
 							<p class="Large"><b>LAMMPS: writting a loop (how-to) </b></p>
 
-							<p align="justify">
-							</p>
 							<br>
-							<p class="Large"><b>Example 1</b></p>
+							<!--<p class="Large"><b>Example 1</b></p>-->
 
 							<p align="justify">First, let us create a minimalist script, containing only the commands that LAMMPS absolutly requires such as the simulation box.</p>
 
@@ -120,7 +118,7 @@
 							<p align="justify">Running this script creates 10 data files, and prints the values of the counter in the terminal.</p>
 
 
-
+						</div>	
 					</div>	
 					<div class="Container1 BackWhite MarginBottom">
 						<div class="clearfix Container7">
