--- a/looptutorial.html
+++ b/looptutorial.html
@@ -55,7 +55,7 @@
 							since 2019 - Postdoc n°2 <br>
 							<a TARGET="_BLANK" href="https://www.qmul.ac.uk/">QMUL, London, UK</a> <br> <br>
 							2016-2019 - Postdoc n°1 <br>
-							<a TARGET="_BLANK" href="https://www.uai.cl/campus-uai/campus-vina-del-mar/"> UAI, Viña del Mar, Chile</a> <br>
+							<a TARGET="_BLANK" href="https://www.uai.cl/campus-uai/campus-vina-del-mar/"> UAI, Vina del Mar, Chile</a> <br>
 							<a TARGET="_BLANK" href="https://www.conicyt.cl/fondecyt/category/concursos/postdoctorado/"> Scholarship Fondecyt Postdoc</a> <br> <br>
 							2012-2015 - PhD thesis <br>
 							<a TARGET="_BLANK" href="https://www.univ-lyon1.fr/"> UCB, Lyon, France </a>
