--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 							
 							<p class="Large2"><b>Career</b></p>
 							<p>
-							since 2019 - Postdoc nÂ°2 <br>
+							since 2019 - Postdoc n°2 <br>
 							<a TARGET="_BLANK" href="https://www.qmul.ac.uk/">QMUL, London, UK</a> <br> <br>
-							2016-2019 - Postdoc nÂ°1 <br>
+							2016-2019 - Postdoc n°1 <br>
 							<a TARGET="_BLANK" href="https://www.uai.cl/campus-uai/campus-vina-del-mar/"> UAI, Vina del Mar, Chile</a> <br>
 							<a TARGET="_BLANK" href="https://www.conicyt.cl/fondecyt/category/concursos/postdoctorado/"> Scholarship Fondecyt Postdoc</a> <br> <br>
 							2012-2015 - PhD thesis <br>
