--- a/looptutorial.html
+++ b/looptutorial.html
@@ -18,7 +18,7 @@
 				<div class="w3-third">
 					<div class="BackWhite TextGrey">
 						<div class="Container1">
-							<a href="./index.html"><p class="Large"><b>Simon Gravelle</b></p></a>
+							<a href="./index.html"><p class="Large3"><b>Simon Gravelle</b></p></a>
 							<p>
 								<a TARGET="_BLANK" href="https://www.sems.qmul.ac.uk/staff/s.gravelle">Postdoctoral researcher <br>
 								University Queen Mary <br>
