--- a/tutorial1MD.html
+++ b/tutorial1MD.html
@@ -82,7 +82,7 @@
 						<div class="clearfix Container5">
 							<p class="Large"><b>Molecular dynamics: viscosity measurement of bulk water (step-by-step tutorial)</b></p>
 
-							<p align="justify">In order to follow this step-by-step tutorial, you need to download <a TARGET="_BLANK" href="https://lammps.sandia.gov/"><span style="color: #000000">LAMMPS</span>, which is an open source classical molecular dynamics code. You also need a text editor, a molecular visualisation program, such as <a TARGET="_BLANK" href="https://www.ks.uiuc.edu/Research/vmd/"><span style="color: #000000">VMD</span></a>, and a data plotting program, such as <a TARGET="_BLANK" href="http://exciting-code.org/xmgrace-quickstart"><span style="color: #000000">Xmgrace</span></a>. Finally, I use Python to generate the initial configuration.
+							<p align="justify">In order to follow this step-by-step tutorial, you need to download <a TARGET="_BLANK" href="https://lammps.sandia.gov/"><span style="color: #000000">LAMMPS</span></a>, which is an open source classical molecular dynamics code. You also need a text editor, a molecular visualisation program, such as <a TARGET="_BLANK" href="https://www.ks.uiuc.edu/Research/vmd/"><span style="color: #000000">VMD</span></a>, and a data plotting program, such as <a TARGET="_BLANK" href="http://exciting-code.org/xmgrace-quickstart"><span style="color: #000000">Xmgrace</span></a>. Finally, I use Python to generate the initial configuration.
 							</p>
 							<br>
 							<p class="Large"><b>Step 1 &mdash; data file generation</b></p>
