--- a/tutorial2MD.html
+++ b/tutorial2MD.html
@@ -82,7 +82,7 @@
 						<div class="clearfix Container5">
 							<p class="Large"><b>Molecular dynamics: capillary filling of a carbon nanotube (how-to) </b></p>
 
-							<p align="justify">In order to execute these scripts, you need to download <a TARGET="_BLANK" href="https://lammps.sandia.gov/">LAMMPS</a>, which is an open source classical molecular dynamics code. You also need a text editor, a molecular visualisation program, such as <a TARGET="_BLANK" href="https://www.ks.uiuc.edu/Research/vmd/">VMD</a>, and a data plotting program, such as <a TARGET="_BLANK" href="http://exciting-code.org/xmgrace-quickstart">Xmgrace</a>. Finally, I use Python to generate the initial configuration.
+							<p align="justify">In order to execute these scripts, you need to download <a TARGET="_BLANK" href="https://lammps.sandia.gov/"><span style="color: #000000">LAMMPS</span></a>, which is an open source classical molecular dynamics code. You also need a text editor, a molecular visualisation program, such as <a TARGET="_BLANK" href="https://www.ks.uiuc.edu/Research/vmd/"><span style="color: #000000">VMD</span></a>, and a data plotting program, such as <a TARGET="_BLANK" href="http://exciting-code.org/xmgrace-quickstart"><span style="color: #000000">Xmgrace</span></a>. Finally, I use Python to generate the initial configuration.
 							</p>
 							<br>
 							<p class="Large"><b>Step 1 &mdash; data file generation</b></p>
@@ -235,7 +235,7 @@
 
 							</div>
 							
-								You can download directly both python file (<a TARGET="_BLANK" href="tuto2MD/systemgeneration.py">systemgeneration.py</a>) and generated data file (<a TARGET="_BLANK" href="tuto2MD/data.lammps">data.lammps</a>).
+								You can download directly both python file (<a TARGET="_BLANK" href="tuto2MD/systemgeneration.py"><span style="color: #000000">systemgeneration.py</span></a>) and generated data file (<a TARGET="_BLANK" href="tuto2MD/data.lammps"><span style="color: #000000">data.lammps</span></a>).
 
 							<br><br>
 
