--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<p>Page under construction. Scripts are coming soon.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.png" class="image"><img src="images/thumbs/02.png" alt="" /></a>
+							<a href="images/fulls/graphene.png" class="image"><img src="images/thumbs/graphene.png" alt="" /></a>
 							<h2>Graphene</h2>
 							<p>Graphene has many incredible physical properties. Unfortunately its production at a large scale remains challenging. Part of my work aims at improving our understanding of the behavior of graphene in fluids, which is crucial because most fabrication processes of graphene-based material rely on the use of fluids. <br> <br>
 Image: a single layer of carbon atoms in vacuum (LAMMPS for the simulation, VMD for the visualization).</p>
