--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<a href="images/fulls/graphene.png" class="image"><img src="images/thumbs/graphene.png" alt="" /></a>
 							<h2>Graphene</h2>
 							<p>Graphene has many incredible physical properties. Unfortunately its production at a large scale remains challenging. Part of my work aims at improving our understanding of the behavior of graphene in fluids, which is crucial because most fabrication processes of graphene-based material rely on the use of fluids. <br> <br>
-Image: a single layer of carbon atoms in vacuum (LAMMPS for the simulation, VMD for the visualization).</p>
+Image: two layers of carbon atoms in vacuum (LAMMPS for the simulation, VMD for the visualization).</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/cellulose.png" class="image"><img src="images/thumbs/cellulose.png" alt="" /></a>
